# cource_work_7

./: README.md  pyproject.toml
config/: settings.py
